# wincode

./: Cargo.toml  README.md  deny.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  fuzz.yml  release.yml
fuzz/: Cargo.toml  build-fuzz-bundle.sh  build.rs
fuzz/fuzz_targets/: roundtrip.rs  solana_types.rs
src/: error.rs  io.rs  len.rs  serde.rs
src/schema/: containers.rs  impls.rs  mod.rs
wincode/: Cargo.toml
wincode-derive/: Cargo.toml
wincode-derive/src/: assert_zero_copy.rs  common.rs  lib.rs  schema_read.rs  schema_write.rs  struct_extensions.rs  tuple.rs  uninit_builder.rs  zero_copy.rs
wincode/benches/: benchmarks.rs  reader.rs
wincode/codegen/: tuple.rs
wincode/examples/: split_api.rs
wincode/src/: error.rs  io.rs  len.rs  lib.rs  serde.rs
wincode/src/config/: mod.rs  serde.rs
wincode/src/io/: buf_read.rs  cursor.rs  hint.rs  iter.rs  mod.rs  slice.rs  std_io.rs  std_read.rs  std_read_direct.rs  std_write.rs  test_util.rs  vec.rs
wincode/src/schema/: adapter.rs  compile_fail.rs  containers.rs  context.rs  impls.rs  int_encoding.rs  mod.rs  tag_encoding.rs
wincode/src/serde_compat/: de.rs  mod.rs  ser.rs
wincode/tests/: assert_zero_copy_schema.rs
