[package]
name = "wincode"
version = "0.1.0"
authors = ["Anza Maintainers <maintainers@anza.xyz>"]
description = "Fast bincode de/serialization with placement initialization"
repository = "https://github.com/anza-xyz/wincode"
homepage = "https://anza.xyz/"
license = "Apache-2.0"
edition = "2021"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["std"]
alloc = []
std = ["alloc", "thiserror/std"]
solana-short-vec = ["dep:solana-short-vec"]

[dependencies]
paste = "1.0.15"
solana-short-vec = { version = "3.0.0", optional = true }
thiserror = { version = "2.0.16", default-features = false }

[dev-dependencies]
bincode = { version = "1.3.3" }
proptest = { version = "1.8.0" }
rand = { version = "0.8.5" }
serde = { version = "1.0.227", features = ["derive"] }
solana-short-vec = { version = "3.0.0" }

[lints.rust]
warnings = "deny"

[lints.clippy]
default_trait_access = "deny"
manual_let_else = "deny"
used_underscore_binding = "deny"
